house_price_mlflow/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: house-price-ui
  namespace: streamlit

spec:
  type: ClusterIP

  selector:
    app: house-price-ui

  ports:
  - port: 80
    targetPort: 8501
