house_price_mlflow/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: house-price-ui
  namespace: streamlit

  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'

spec:
  ingressClassName: alb

  rules:
  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: house-price-ui

            port:

              number: 80
